# korbo

./: .gitignore  CMakeLists.txt  README.md  gb.sh  korbo.xd
cmake/: FindRapidJSON.cmake
json/: CMakeLists.txt
json/src/: temp.cpp  temp.hpp
kfile/: CMakeLists.txt
kfile/src/: FileI18n.cpp  FileI18n.hpp  FileSettings.cpp  FileSettings.hpp  KFile.cpp  KFile.hpp
kio/: CMakeLists.txt
kio/src/: File.cpp  File.hpp
klogc/: CMakeLists.txt
klogc/src/: Preferences.cpp  Preferences.hpp  StartUp.cpp  StartUp.hpp
korbo/src/: Main.cpp  Main.hpp
kui/: CMakeLists.txt
kui/src/: AboutDialog.cpp  AboutDialog.hpp  KorboWindow.cpp  KorboWindow.hpp  PreferencesDialog.cpp  PreferencesDialog.hpp
kupdt/: CMakeLists.txt
kupdt/src/: Main.cpp  Main.hpp
kupdt/src/ui/: UpdtWindow.cpp  UpdtWindow.hpp
